# small_etl

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  test_scheduler.db  test_scheduler_cli.db  test_scheduler_list_empty.db  需求功能对照.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_unique_constraints.py  96f12c403d72_add_foreign_key_constraint_for_trade_.py
configs/: config.yaml
configs/db/: dev.yaml  test.yaml
configs/etl/: default.yaml
configs/extractor/: default.yaml
configs/pipeline/: default.yaml
configs/s3/: dev.yaml
configs/scheduler/: default.yaml
doc/: architecture.md  product.md  tech.md  可扩展性.md
doc/env_doc/: csv_schema.md  environment_setup.md  validation_rules.md
doc/schema/: schema.md  xtconstants_250516.1.1.json
src/small_etl/: __init__.py  __main__.py  cli.py
src/small_etl/application/: __init__.py  pipeline.py
src/small_etl/data_access/: __init__.py  db_setup.py  duckdb_client.py  postgres_repository.py  s3_connector.py
src/small_etl/domain/: __init__.py  enums.py  models.py  registry.py  schemas.py
src/small_etl/scheduler/: __init__.py  scheduler.py
src/small_etl/services/: __init__.py  analytics.py  extractor.py  loader.py  validator.py
tests/: conftest.py  container_manager.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_analytics.py  test_cli.py  test_coverage_additional.py  test_db_setup.py  test_duckdb.py  test_extractor.py  test_loader.py  test_main.py  test_models.py  test_pipeline.py  test_postgres_repository.py  test_scheduler.py  test_validator.py
