[project]
authors = [{name = "zhaohanjun", email = "hankin_zhao@qq.com"}]
dependencies = []  # 定义项目的运行时依赖项
name = "small_etl"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.pixi.workspace]
# channels = ["https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/"]  # 清华 TUNA 近一年逐步 限制或关闭 对 conda 生态的公共镜像访问
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
minio = ">=7.2.9"
faker = ">=28.4.1"
sqlmodel = ">=0.0.22"
alembic = ">=1.13.0"
duckdb = ">=1.1.0"
polars = ">=1.0.0"
pyarrow = ">=17.0.0"
pandera = { version = ">=0.20.0", extras = ["polars"] }
hydra-core = ">=1.3.0"
psycopg2-binary = ">=2.9.0"
apscheduler = ">=3.10.0"
small_etl = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]  # 定义 Pixi 环境中的依赖项
python = "3.12.*"
nodejs = ">=22"  # pyright 依赖 nodejs，显式指定新版本
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
ruff = ">=0.14.8,<0.15"
pyright = ">=1.1.407,<2"
pyrefly = ">=0.45.2,<0.46"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
# 统一使用 Ruff 作为格式化与基础/中等强度的 Lint 工具
line-length = 180
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# 启用基础规则 + 导入排序（等价于 isort）
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.pyright]
# 使用 Pyright 进行类型检查（VSCode 中由 Pylance 实时执行）
include = ["src"]
typeCheckingMode = "standard"
reportMissingImports = "error"
pythonVersion = "3.12"

[tool.pyrefly]
python_interpreter = "/home/zhaohj/small_etl/.pixi/envs/default/bin/python"
project-includes = ["src"]
infer-with-first-use = false
permissive-ignores = true

[tool.pyrefly.errors]
missing-import = "error"
# 以下这些提示，在代码处注释（不要全局开）
# bad-override = "ignore"
# deprecated = "ignore"
